Adds admin panel with dashboard, product, and client management
Introduces a new admin panel with navigation and sections for dashboard, product, and client management.
Implements graphical data visualization using Chart.js.
Includes functionality to add, edit, and delete products and clients via modals.
Fixes an image path in the catalog page for consistency.

Provides supporting styles and scripts for the admin panel layout and interactivity.

--- a/Assets/pages/catalogo.html
+++ b/Assets/pages/catalogo.html
@@ -37,7 +37,7 @@
                     </ul>
                     <div class="carrito">
                         <a href="../pages/carritoDeCompras.html" class="nav-link">
-                            <img src="../imagenes/carrito-compras.svg">
+                            <img src="../images/carrito-compras.svg">
                         </a>
                     </div>
                     <div>
