Adds monthly user chart and improves layout
Adds a new chart displaying monthly user data to the admin page. Updates HTML structure and CSS styling to better organize and display charts, ensuring a responsive layout. Adjusts chart dimensions for improved visual consistency.

No issue reference provided.

--- a/Assets/pages/admin.html
+++ b/Assets/pages/admin.html
@@ -113,12 +113,20 @@
                 </div>
             </div>
             <!-- Gráficas -->
+             <section class="general-content-graficas">
             <div class="general-grafico col-md-6">
                 <div class="grafico">
                     <div class="header-grafico">Ventas del Mes</div>
                     <canvas id="myChart" class="grafica"></canvas>
                 </div>
             </div>
+              <div class="general-grafico col-md-6">
+                <div class="grafico">
+                    <div class="header-grafico">Usuarios del Mes</div>
+                    <canvas id="myChart2" class="grafica"></canvas>
+                </div>
+            </div>
+             </section>
         </div>
         <!--Productos-->
         <div id="productos" class="section products-clients">
