--- a/Assets/pages/catalogo.html
+++ b/Assets/pages/catalogo.html
@@ -36,7 +36,7 @@
                         </li>
                     </ul>
                     <div class="carrito">
-                        <a href="../pages/carritoDeCompras.html" class="nav-link">
+                        <a href="../pages/carritoDeCompras.html">
                             <img src="../images/carrito-compras.svg">
                         </a>
                     </div>
@@ -204,7 +204,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Tenis Hombre</h5>
-                            <p class="card-text">150.000</p>
+                            <p class="card-text">$150.000</p>
                             <button class="cartBtn">
                                 <svg class="cart" fill="white" viewBox="0 0 576 512" height="1em"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -613,6 +613,17 @@
                         </div>
                     </div>
                 </div>
+                    <div class="custom-alert alert alert-success" role="alert">
+                        
+                        <svg class="custom-bi bi flex-shrink-0 me-2" role="img" aria-label="Success:">
+                            <symbol id="check-circle-fill" viewBox="0 0 16 16">
+    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+  </symbol>
+                            <use xlink:href="#check-circle-fill"/></svg>
+                        <div>
+                            <p>Producto agregado al carrito correctamente.</p>
+                        </div>
+                    </div>
     </main>
     <!--Footer-->
     <footer class="text-center py-4">
@@ -625,6 +636,6 @@
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
     <!--script-->
-    <script src="../script/script.js"></script>
+    <script src="../script/catalogo.js"></script>
 </body>
 </html>
