Se creo la interfaz del carrito de compras, se añadieron sus estilos y se modificaron los link para conectar con el carrito de compras

--- a/Assets/pages/catalogo.html
+++ b/Assets/pages/catalogo.html
@@ -36,7 +36,7 @@
                         </li>
                     </ul>
                     <div class="carrito">
-                        <a href="../pages/carritoDeCompras.html">
+                        <a href="../pages/carritoCompras.html">
                             <img src="../images/carrito-compras.svg">
                         </a>
                     </div>
