Improve admin page UI and functionality; add shopping cart page
Refines the admin page layout by adjusting table headers, fixing
misaligned list items, and updating modal input placeholders.

Introduces a new shopping cart page with a responsive layout,
product details, and a summary section for order review.

Enhances catalog functionality by enabling product addition to
the localStorage-based cart and fixing a broken link to the
shopping cart page.

--- a/Assets/pages/admin.html
+++ b/Assets/pages/admin.html
@@ -25,7 +25,7 @@
     <!--nav bar-->
     <header>
         <nav class="nav-admin">
-            <div class="content-nav-admin">
+            <div class="content-nav-admin"> 
                 <div class="tittle-nav-admin">
                     <h2><strong>JESSKA</strong></h2>
                 </div>
@@ -77,8 +77,6 @@
                         </svg>
                     </button>
                 </li>
-
-                 <li class="lateral-content-list nav-item">
                 <li class="lateral-content-list nav-item">
                     <button class="cta nav-button" data-target="Pedidos">
                         <span>Pedidos</span>
@@ -145,9 +143,9 @@
             <table class="list-style" id="tabla-productos">
                 <thead>
                     <tr>
+                        <th>Marca</th>
                         <th>Nombre</th>
                         <th>Cantidad</th>
-                        <th>Stock</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
@@ -155,7 +153,7 @@
                     <tr>
                     
                         <td>nike</td>
-                        <td>5</td>
+                        <td>Air for one</td>
                         <td>2</td>
                         <td>
                             <div class="content-buttons">
@@ -202,7 +200,7 @@
                     </tr>
                 <tr>
                     <td>Adidas</td>
-                    <td>7</td>
+                    <td>Runfalcon</td>
                     <td>5</td>
                     <td>
                         <div class="content-buttons">
@@ -366,9 +364,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <input type="text" class="btnSesion editar-inputs" id="nombreProducto" placeholder="Nombre">
-                    <input type="number" class="btnSesion editar-inputs" id="cantidad" placeholder="Cantidad">
-                    <input type="number" class="btnSesion editar-inputs" id="stock" placeholder="Stock">
+                    <input type="text" class="btnSesion editar-inputs" id="nombreProducto" placeholder="Marca">
+                    <input type="text" class="btnSesion editar-inputs" id="cantidad" placeholder="Nombre">
+                    <input type="number" class="btnSesion editar-inputs" id="stock" placeholder="Cantidad">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
