--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <form class="form">
-                  <p class="title2">Registro </p>
+                  <p class="title2">Registrarse </p>
                   <p class="message">Regístrese ahora y obtenga acceso completo a nuestra aplicación. </p>
                   <div class="flex">
                       <label>
