--- a/Assets/pages/catalogo.html
+++ b/Assets/pages/catalogo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +19,7 @@
     <link rel="stylesheet" href="../styles/catalogo.css">
     <title>Catalogo</title>
 </head>
+
 <body>
     <!--Header-->
     <header>
@@ -37,7 +39,7 @@
                     </ul>
                     <div class="carrito">
                         <a href="../pages/carritoCompras.html">
-                            <img src="../images/carrito-compras.svg">
+                            <img src="../images/carrito-compras.svg" alt="carrito">
                         </a>
                     </div>
                     <div>
@@ -49,13 +51,12 @@
                 </div>
             </div>
         </nav>
-    </header>   
+    </header>
     <!--Modal 1-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal1" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="form-container" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
+                <div class="form-container" id="exampleModal2" tabindex="-1" aria-hidden="true">
                     <p class="title">Bienvenido</p>
                     <form class="form">
                         <input type="email" class="input" placeholder="Email">
@@ -94,7 +95,7 @@
     </div>
     <!--Modal 2-->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -613,17 +614,21 @@
                         </div>
                     </div>
                 </div>
-                    <div class="custom-alert alert alert-success" role="alert">
-                        
-                        <svg class="custom-bi bi flex-shrink-0 me-2" role="img" aria-label="Success:">
-                            <symbol id="check-circle-fill" viewBox="0 0 16 16">
-    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-  </symbol>
-                            <use xlink:href="#check-circle-fill"/></svg>
-                        <div>
-                            <p>Producto agregado al carrito correctamente.</p>
-                        </div>
+                <div class="custom-alert alert alert-success" role="alert">
+
+                    <svg class="custom-bi bi flex-shrink-0 me-2" role="img" aria-label="Success:">
+                        <symbol id="check-circle-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+                        </symbol>
+                        <use xlink:href="#check-circle-fill" />
+                    </svg>
+                    <div>
+                        <p>Producto agregado al carrito correctamente.</p>
                     </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!--Footer-->
     <footer class="text-center py-4">
@@ -638,4 +643,5 @@
     <!--script-->
     <script src="../script/catalogo.js"></script>
 </body>
+
 </html>
