Resolves merge conflicts and cleans up modal and carousel elements
Fixes inconsistencies and removes redundant merge conflict markers.

Updates modal IDs and target attributes for consistency and usability.
Removes unnecessary `alt` attributes from carousel images to streamline markup.
Improves overall structure and readability of HTML by eliminating duplicate code.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,17 +19,14 @@
   <link rel="stylesheet" href="Assets/styles/style.css">
   <title>JESKKA</title>
 </head>
+
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
-<<<<<<< HEAD
 
         <h3><strong>JESSKA</strong></h3>
 
-=======
-        <h3><strong>JESSKA</strong></h3>
->>>>>>> f2fc80db9e9a278dbcf4a44b5e2fdbfd5862679d
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -51,7 +49,7 @@
             </a>
           </div>
           <div>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
               Iniciar Sesion
             </button>
           </div>
@@ -60,18 +58,11 @@
     </nav>
   </header>
   <!--Modal 1-->
-<<<<<<< HEAD
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="form-container" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
           aria-hidden="true">
-=======
-  <div class="modal fade" id="exampleModal2" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="form-container" id="exampleModal3" tabindex="-1" aria-hidden="true">
->>>>>>> f2fc80db9e9a278dbcf4a44b5e2fdbfd5862679d
           <p class="title">Bienvenido</p>
           <form class="form">
             <div class="mb-3">
@@ -112,11 +103,7 @@
   </div>
   <!--Modal 2-->
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-<<<<<<< HEAD
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
-=======
-    aria-hidden="true">
->>>>>>> f2fc80db9e9a278dbcf4a44b5e2fdbfd5862679d
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -130,10 +117,7 @@
               <input required="" placeholder="" type="text" class="input">
               <span>Primer Nombre</span>
             </label>
-<<<<<<< HEAD
 
-=======
->>>>>>> f2fc80db9e9a278dbcf4a44b5e2fdbfd5862679d
             <label>
               <input required="" placeholder="" type="text" class="input">
               <span>Segundo Nombre</span>
@@ -143,10 +127,7 @@
             <input required="" placeholder="" type="email" class="input">
             <span>Email</span>
           </label>
-<<<<<<< HEAD
 
-=======
->>>>>>> f2fc80db9e9a278dbcf4a44b5e2fdbfd5862679d
           <label>
             <input required="" placeholder="" type="password" class="input">
             <span>Contraseña</span>
@@ -157,11 +138,7 @@
           </label>
           <button class="submit">Registrarse</button>
           <p class="signin">Ya tienes una cuenta ? <a href="" data-bs-toggle="modal"
-<<<<<<< HEAD
               data-bs-target="#exampleModal">Iniciar sesion</a> </p>
-=======
-              data-bs-target="#exampleModal4">Iniciar sesion</a> </p>
->>>>>>> f2fc80db9e9a278dbcf4a44b5e2fdbfd5862679d
         </form>
       </div>
     </div>
@@ -190,7 +167,7 @@
         <h1><strong>El equilibrio perfecto entre estilo y funcionalidad.</strong></h1>
       </div>
       <div class="second-content-img">
-        <img src="Assets/images/logo_Urban_Steps.svg" id="logo" alt="logo">
+        <img src="Assets/images/logo_Urban_Steps.svg" id="logo">
       </div>
     </div>
     <!--segundo contenido-->
@@ -284,7 +261,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-hombre-8.svg" class="card-img-top" alt="zapato Hombre">
+                    <img src="Assets/images/carrusel-hombre-8.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Deportivos</h5>
@@ -295,21 +272,24 @@
                       <span>Comprar</span>
                     </button>
                   </div>
+
                 </div>
               </li>
+
             </ul>
           </div>
         </section>
       </div>
       <h3>Mujer</h3>
+
       <div class="third-content">
-        <section class="splide" id="splide1">
+        <section class="splide" id="splide2">
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-mujer-1.svg" class="card-img-top" alt="zapato Mujer">
+                    <img src="Assets/images/carrusel-mujer-1.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Deportivo Mujer</h5>
@@ -325,7 +305,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-mujer-2.svg" class="card-img-top" alt="zapato Mujer">
+                    <img src="Assets/images/carrusel-mujer-2.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Mujer</h5>
@@ -341,7 +321,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-mujer-3.svg" class="card-img-top" alt="zapato Mujer">
+                    <img src="Assets/images/carrusel-mujer-3.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Casuales Mujer</h5>
@@ -357,7 +337,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-mujer-4.svg" class="card-img-top" alt="zapato Mujer">
+                    <img src="Assets/images/carrusel-mujer-4.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Mujer</h5>
@@ -373,7 +353,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-mujer-5.svg" class="card-img-top" alt="zapato Mujer">
+                    <img src="Assets/images/carrusel-mujer-5.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Blancos Mujer</h5>
@@ -389,7 +369,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-mujer-6.svg" class="card-img-top" alt="zapato Mujer">
+                    <img src="Assets/images/carrusel-mujer-6.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis para Mujer</h5>
@@ -414,7 +394,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-infante-1.svg" class="card-img-top" alt="zapato Niños">
+                    <img src="Assets/images/carrusel-infante-1.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis para Niños</h5>
@@ -430,7 +410,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-infante-2.svg" class="card-img-top" alt="zapato Niños">
+                    <img src="Assets/images/carrusel-infante-2.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis para Niña</h5>
@@ -446,7 +426,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-infante-3.svg" class="card-img-top" alt="zapato Niños">
+                    <img src="Assets/images/carrusel-infante-3.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis para Niño</h5>
@@ -462,7 +442,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-infante-4.svg" class="card-img-top" alt="zapato Niños">
+                    <img src="Assets/images/carrusel-infante-4.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Unisex</h5>
@@ -478,7 +458,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-infante-5.svg" class="card-img-top" alt="zapato Niños">
+                    <img src="Assets/images/carrusel-infante-5.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Nike para Niño</h5>
@@ -494,7 +474,7 @@
               <li class="splide__slide">
                 <div class="card" style="width: 18rem;">
                   <div class="card-header">
-                    <img src="Assets/images/carrusel-infante-6.svg" class="card-img-top" alt="zapato Niños">
+                    <img src="Assets/images/carrusel-infante-6.svg" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <h5>Tenis Jordan para Niños</h5>
@@ -507,6 +487,7 @@
                   </div>
                 </div>
               </li>
+
             </ul>
           </div>
         </section>
@@ -516,10 +497,7 @@
   <!--Footer-->
   <footer class="text-center py-4">
     <p>&copy; 2025 JESSKA. El equilibrio perfecto entre estilo y funcionalidad</p>
-<<<<<<< HEAD
 
-=======
->>>>>>> f2fc80db9e9a278dbcf4a44b5e2fdbfd5862679d
   </footer>
   <!--splide.js-->
   <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
@@ -530,8 +508,5 @@
   <!--script-->
   <script src="Assets/script/script.js"></script>
 </body>
-<<<<<<< HEAD
 
-=======
->>>>>>> f2fc80db9e9a278dbcf4a44b5e2fdbfd5862679d
 </html>
